#********************************************************************
# (C) DaVinci Engineering GmbH 2022
#*******************************************************************/

add_subdirectory(Fee)
add_subdirectory(MemIf)
add_subdirectory(Ea)
add_subdirectory(WdgIf)
#add_subdirectory(Eep)
#add_subdirectory(Wdg)
