#********************************************************************
# (C) DaVinci Engineering GmbH 2022
#*******************************************************************/

add_subdirectory(Crc)
add_subdirectory(EcuM)
add_subdirectory(Nm)
add_subdirectory(kernel)
add_subdirectory(ComM)
add_subdirectory(SchM)
add_subdirectory(WdgM)
