#********************************************************************
# (C) DaVinci Engineering GmbH 2022
#*******************************************************************/
#add_subdirectory(examples)
add_subdirectory(MCAL)
#add_subdirectory(design)
add_subdirectory(system)
#add_subdirectory(iohwabs)